--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,6 @@
 @charset "UTF-8";
 
-@font-face {
-  font-family: MajorMonoDisplay;
-  src: url("/assets/fonts/MajorMonoDisplay-Regular.ttf");
-}
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap');
 
 /*!
 * Start Bootstrap - Coming Soon v6.0.6 (https://startbootstrap.com/theme/coming-soon)
@@ -67,7 +64,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #000000;
-  --bs-body-bg: #00EA8D;
+  --bs-body-bg: #8E85E6;
 }
 
 *,
@@ -110,7 +107,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "MajorMonoDisplay", Roboto, Arial, sans-serif;
+  font-family: "Fira Sans", Roboto, Arial, sans-serif;
   line-height: 1.2;
 }
 
